--- a/Lab/TP01/contacto.html
+++ b/Lab/TP01/contacto.html
@@ -14,12 +14,12 @@
         <button class="boton"><a href="index.html">Home</a></button>
         <button class="boton"><a href="acercaDe.html">Acerca De</a></button>
         <button class="boton"><a href="contacto.html">Contacto</a></button>
-        <h1 class="titulo">Acerca de nosotros:</h1>
+        <h1 class="titulo">Contacto:</h1>
 
     </div>
     <br>
 
-    <div class = 'descripciones2'> Somos una empresa familiar dedicada al rubro de las maderas hace más de 50 años </div>
+    <div class = 'descripciones2'> Para contactarnos, escribinos al mail madereraJuan@madera.com </div>
 
     <br>
     <div class="bannerFinal">
