--- a/Lab/Clase05/index.html
+++ b/Lab/Clase05/index.html
@@ -14,58 +14,66 @@ Pueden usar todo lo visto, no se pide estilos de CSS para realizarlas, solo lo q
 en las clases.
 Se entrega al final del día, también la compartiremos en la clase para ver como
 trabajaron algunos de los proyectos. Es individual. -->
-<div id="Encabezado">
-    <h1> Pollo al verdeo</h1>
-    <img src="./polloalverdeo.jpg" width="500px" height="400px">
-</div>
 
 <body>
 
-    <div id="Detalle">
-        <h2>Ingredientes:</h2>
-        <ul>
-            <li>Pollo 500gr</li>
-            <li>Crema 100ml</li>
-            <li>Ajo</li>
-            <li>Cebolla de verdeo</li>
-        </ul>
-
-        <h2>Receta:</h2>
-        <ol>
-            <li>Sellar las piezas de pollo, y luego retirarlo de la olla</li>
-            <li>Agregar el ajo y la parte violeta de la cebolla de verdeo</li>
-            <li>Una vez transparentadas las verduras, volvemos a poner el pollo</li>
-            <li>Agregamos la crema, y una vez empiece a burbujear, sumamos la parte verde de la cebolla de verdeo</li>
-            <li>Cocinar por 10 minutos más y servir</li><br>
-        </ol>
-
-        <div>
-            <h3>Si se te hace más cómodo, podés escucharla!</h3>
-            <audio controls>
-                <source src="Receta.mp3" type="audio/mpeg">
-            </audio>
+    <header>
+        <div id="Encabezado">
+            <h1> Pollo al verdeo</h1>
+            <img src="./polloalverdeo.jpg" width="500px" height="400px">
         </div>
-        <br>
+    </header>
 
-        <h3>Valores nutricionales:</h3>
-        <table border="1px">
-            <thead>
-                <tr>
-                    <th>Calorias</th>
-                    <th>Proteínas</th>
-                    <th>Carbohidratos</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>700</td>
-                    <td>20</td>
-                    <td>8</td>
-                </tr>
-            </tbody>
-        </table>
+    <main>
+        <div id="Detalle">
+            <h2>Ingredientes:</h2>
+            <ul>
+                <li>Pollo 500gr</li>
+                <li>Crema 100ml</li>
+                <li>Ajo</li>
+                <li>Cebolla de verdeo</li>
+            </ul>
 
-    </div>
+            <h2>Receta:</h2>
+            <ol>
+                <li>Sellar las piezas de pollo, y luego retirarlo de la olla</li>
+                <li>Agregar el ajo y la parte violeta de la cebolla de verdeo</li>
+                <li>Una vez transparentadas las verduras, volvemos a poner el pollo</li>
+                <li>Agregamos la crema, y una vez empiece a burbujear, sumamos la parte verde de la cebolla de verdeo
+                </li>
+                <li>Cocinar por 10 minutos más y servir</li><br>
+            </ol>
+
+            <div>
+                <h3>Si se te hace más cómodo, podés escucharla!</h3>
+                <audio controls>
+                    <source src="Receta.mp3" type="audio/mpeg">
+                </audio>
+            </div>
+            <br>
+
+            <h3>Valores nutricionales:</h3>
+            <table border="1px">
+                <thead>
+                    <tr>
+                        <th>Calorias</th>
+                        <th>Proteínas</th>
+                        <th>Carbohidratos</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>700</td>
+                        <td>20</td>
+                        <td>8</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
+    <footer>
+        <p>Todos los derechos reservados;</p>
+    </footer>
 </body>
 
 </html>
